# hope-agent-service

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: .gitignore  drizzle.config.js  drizzle.config.js.map  drizzle.config.ts  package.json  swagger.json  tsconfig.json
apps/api/drizzle/: 0000_black_silver_samurai.sql  0001_cooing_secret_warriors.sql  0002_breezy_lila_cheney.sql  0003_many_owl.sql  0004_new_lady_mastermind.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
apps/api/scripts/: usage.seed.ts
apps/api/src/: server.ts
apps/api/src/configs/: redis.ts  swagger.ts
apps/api/src/db/: api.schema.ts  index.ts  membership.schema.ts  organization.schema.ts  run-log.schema.ts  schema.ts  user.schema.ts
apps/api/src/middlewares/: auth.middleware.ts  error.middleware.ts  org.middleware.ts  validate.middleware.ts
apps/api/src/scripts/: generate-swagger.ts
apps/client/: package.json
apps/client/app/: globals.css  layout.tsx  page.tsx
apps/client/components/: Sidebar.tsx
apps/client/lib/: api.ts  store.ts
apps/genai/: .env.example  .gitignore  README.md  main.py  package.json  pyproject.toml  ruff.toml
apps/genai/src/genai/: __init__.py  app.py  config.py  main.py
apps/genai/src/genai/agents/: __init__.py  agent.py  echo_agent.py  lang_agent.py  langgraph_agent.py  langgraph_hitl_approval_agent.py  react_agent.py  simple_agent.py
apps/genai/src/genai/api/: api.py  auth.py
arch/: arch_final.md
docs/agent-sdk/: 01-getting-started.md  02-tools.md  03-agent-profile.md  04-execution-steps.md  05-registering-agents.md  06-resume-check.md  07-testing.md  08-api-reference.md  09-langgraph.md  README.md
(+57 files in other folders)
