[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai"
version = "0.0.1"
description = "A GenAI project built with LangChain and modern Python tools"
readme = "README.md"
authors = [
    { name = "Suraj Airi", email = "surajairi.ml@gmail.com" }
]
license = { text = "MIT license" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "litellm>=1.89.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

